--- a/02Shape/index.html
+++ b/02Shape/index.html
@@ -9,13 +9,42 @@
   </head>
   <body>
     <a-scene background="color: #333333">
-      <a-box id="myBox"
-        width="3"
-        height="2"
-        depth="1"
-        color="#BBAA33" 
-        shadow>
-      </a-box>
+      	<a-box id="myBox"
+        width="2"
+        height="1"
+        depth="3"
+        color="#b10000" 
+        shadow
+        position="0 1.5 -5"
+        rotation="30 0 0"
+        >
+      	</a-box>
+		<a-cone
+         width="3"
+         height="3"
+         depth="3"
+         color="#FFFFFF"
+         position="-2 4 -7"
+         rotation="57 57 9"
+         shadow
+         >
+     	</a-cone>
+        <a-cylinder
+	   	width="5"
+       	height="1"
+       	position="3 1 -5"
+        rotation="-90 5 76"
+        color="#666666"
+        >
+        </a-cylinder>
+        <a-plane
+        width="200"
+        height="400"
+        position="0 0 -4"
+        rotation="-90 0 0"
+        color="#e23461"
+        >
+        </a-plane>
     </a-scene>
   </body>
 </html>
