--- a/03Textures/index.html
+++ b/03Textures/index.html
@@ -18,8 +18,10 @@
         rotation="0 45 0" 
         width="3" 
         height="1" 
-        depth="1" 
-        shadow>
+        depth="1"
+        material="src: #wood" 
+        shadow
+        >
       </a-box>
       <a-plane id="ground"
         position="0 0 -4" 
