--- a/04Animation/index.html
+++ b/04Animation/index.html
@@ -22,11 +22,12 @@
         depth="1" 
         material="src: #wood"
         shadow 
-        animation="property: rotation; 
-                   to: 90 360 180; 
+        animation="property: position; 
+                   to: 3 2 -15;
+                   delay: 4000; 
                    dur: 2000; 
                    easing: linear; 
-                   loop: true" >
+                   loop: 1" >
       </a-box>
       <a-box id="myOtherBox" 
         position="2 1 -3" 
@@ -35,7 +36,13 @@
         height="1" 
         depth="1" 
         material="src: #wood2"
-        shadow>  
+        shadow
+        animation="property: position; 
+                   to: -3 1 -3;
+                   delay: 6000; 
+                   dur: 2000; 
+                   easing: linear; 
+                   loop: 1">  
       </a-box>
       <a-plane id="ground"
         position="0 0 -4" 
